Fix left sidebar alignment and background color

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,8 +3,7 @@ $bodyColor: #000000;
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
 body, html {
-  // background: $backgroundColor;
-  background-color: #a9a9a9;
+  background-color: $backgroundColor;
   color: $bodyColor;
   height: 100%;
   font-family: $bodyFont;
@@ -57,8 +56,8 @@ h1, h2 {
 }
 
 #home-container {
-  background: rgba(0,0,0,0.6) url("../img/chicago-benjamin-suter.jpeg"); 
-  background-blend-mode: darken;
+  background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("../img/chicago-benjamin-suter.jpeg"), rgb(159, 159, 159); 
+  // background-blend-mode: darken;
   background-size: cover;
   background-position: 51%;
   display: flex;
